# w2v2-speaker

./: .env.example  .gitignore  LICENCE  README.md  convert_voxceleb2.sh  predict.py  pyproject.toml  run.py
config/: predict.yaml  train_eval.yaml
config/callbacks/: debugging.yaml  default_speech.yaml  none.yaml  speaker_default.yaml  speaker_early_stopping.yaml
config/evaluator/: cosine_distance.yaml  cosine_distance_with_train_data.yaml  lda.yaml  plda.yaml
config/experiment/: speaker_dummy.yaml  speaker_ecapa_tdnn.yaml  speaker_wav2vec2_aam.yaml  speaker_wav2vec2_ce.yaml  speaker_wav2vec2_ctc.yaml  speaker_wav2vec2_pairs.yaml  speaker_wav2vec2_triplet.yaml  speaker_wav2vec2_triplet_ce.yaml  speaker_xvector.yaml  speech_wav2vec2_ctc.yaml
config/network/: dummy.yaml  ecapa_tdnn.yaml  wav2spk.yaml  wav2vec2_fc.yaml  wav2vec2_fc_letter.yaml  wav2vec2_paired.yaml  wav2vec_fc.yaml  wav2vec_xvector.yaml  xvector.yaml
config/profiler/: advanced.yaml  simple.yaml
config/search/: lr_and_aam_loss.yaml  lr_and_pooling.yaml  lr_and_schedule_search.yaml
config/tokenizer/: default.yaml
config/trainer/: trainer.yaml  (+1 more)
paper_results/: run_tests_pool.py
preparation_scripts/: download_and_prepare_rirs.sh  download_librispeech.sh  download_pretrained_models.sh  download_voxceleb_meta.sh  hydra_bash_complete.sh  set_cuda_dependencies.sh  validate_scores.py  voxceleb2_convert_to_wav.py
requirements/: requirements_cuda101.txt  requirements_cuda111.txt  requirements_py1.9_cuda111.txt
src/: config_util.py  eval_metrics.py  hydra_resolvers.py  main.py  predict.py  util.py
(+125 files in other folders)
